syntax = "proto3";

option csharp_namespace = "Server.protos";


service PuppetMasterServices {
    rpc ServerRequest (ServerRequestObject) returns (ServerResponseObject) {}
    rpc PartitionRequest (PartitionRequestObject) returns (PartitionResponseObject) {}
    rpc StatusRequest (StatusRequestObject) returns (StatusResponseObject) {}
    rpc ClientRequest (ClientRequestObject) returns (ClientResponseObject) {}
    rpc CrashRequest (CrashRequestObject) returns (CrashResponseObject) {}
    rpc FreezeRequest (FreezeRequestObject) returns (FreezeResponseObject) {}
    rpc UnfreezeRequest (UnfreezeRequestObject) returns (UnfreezeResponseObject) {}
}

message ServerRequestObject {
    string server_id = 1;
    int32 min_delay = 2;
    int32 max_delay = 3;
    string url = 4;
}

message ServerResponseObject {
    string success = 1;
}

message PartitionRequestObject {
    string partition_name = 1;
    repeated string server_id = 2;

}

message PartitionResponseObject {
    string success = 1;
}

message StatusRequestObject {
}

message StatusResponseObject {
}


message ClientRequestObject {
    string username = 1;
    string client_url = 2;
    string scriptfile = 3;
} 

message ClientResponseObject {
    string success = 1;
}

message CrashRequestObject {

}

message CrashResponseObject {
    string success = 1;
}

message FreezeRequestObject {

}

message FreezeResponseObject {
    string success = 1;
}

message UnfreezeRequestObject {

}

message UnfreezeResponseObject {
    string success = 1;
}